/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "util.proto";
import "content_service.proto";

option java_multiple_files = true;
option java_package = "com.dremio.services.nessie.grpc.api";
option java_outer_classname = "DiffApiProto";

package com.dremio.services.nessie.grpc.proto;

service DiffService {
  rpc getDiff (DiffRequest) returns (DiffResponse) {};
}

message DiffRequest {
  string fromRefName = 1;
  string toRefName = 2;
  optional string fromHashOnRef = 3;
  optional string toHashOnRef = 4;
  optional int32 maxRecords = 5;
  optional string pageToken = 6;
  optional ContentKey minKey = 7;
  optional ContentKey maxKey = 8;
  optional ContentKey prefixKey = 9;
  optional string filter = 10;
  repeated ContentKey keys = 11;
}

message DiffResponse {
  repeated DiffEntry diffs = 1;
  optional Reference effectiveFromRef = 2;
  optional Reference effectiveToRef = 3;
  bool hasMore = 4;
  optional string pageToken = 5;
}

message DiffEntry {
  ContentKey key = 1;
  optional Content from = 2;
  optional Content to = 3;
}
